# otomoto-explorer

./: .gitignore  LICENSE  README.MD  harvest.py  main.js  otomoto-analysis.ipynb  package.json  pyproject.toml
data/2020-09-27/: mercedes-benz_cla-klasa_2020-09-27T12:57:10.928Z.csv
data/2020-10-03/: suzuki_sx4_2020-10-03T14:37:02.048Z.csv
