[tool.poetry]
name = "otomoto"
version = "0.1.0"
description = ""
authors = ["Tomasz <tomek.dziopa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"
tqdm = "^4.51.0"
matplotlib = "^3.3.2"
plotly = "^4.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
